add language , meta tags ,

--- a/index.html
+++ b/index.html
@@ -1,10 +1,18 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <!-- meta  -->
+    <meta name="description" content="Fibo-pizza - Created by It-Start" />
+    <meta
+      name="keywords"
+      content="Pizza , pizza web , itech academy , it-start , fibo pizza , pizza market"
+    />
+    <meta name="author" content="Itech academy" />
+
+    <title>Fibo Pizza | Itech academy</title>
+    <link rel="icon" type="img/png" href="./public/icon.png" />
   </head>
   <body>
     <div id="root"></div>
