--- a/index.html
+++ b/index.html
@@ -13,6 +13,10 @@
 
     <title>Fibo Pizza | Itech academy</title>
     <link rel="icon" type="img/png" href="./public/icon.png" />
+
+      <!-- Form telegram web app -->
+      <script src="https://telegram.org/js/telegram-web-app.js"></script>
+
   </head>
   <body>
     <div id="root"></div>
